js/js.translator/testData/incremental/invalidation/addMethodToOpenClassWithConsumer/lib1/l1.0.kt
package sample

open class A {
    open fun foo(): Int = 42
}
